--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
  <!DOCTYPE html>
 <html lang="pt-br">
   <head>
+   <meta name="facebook-domain-verification" content="l9tio3syclj7zy0rngq92urhjn5puq" />
    <!-- Meta Pixel Code -->
 <script>
 !function(f,b,e,v,n,t,s)
